fixed overflow with inflation container

--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,6 @@
 body {
   padding: 0;
   margin: 0;
-  overflow-x: hidden;
   margin-bottom: 70px;
   font-family: sans-serif;
 }
@@ -195,6 +194,7 @@ article p {
 
 .main-icons-right {
   display: flex;
+  align-content: center;
 }
 
 .main-icons-right div {
@@ -218,10 +218,9 @@ article p {
   height: 13px;
 }
 
-.main-icons-right div img {
-  padding-top: 7px;
-  vertical-align: middle;
-}
+/* .main-icons-right div img {
+
+} */
 
 .main-icons-right :nth-child(5) {
   background-color: white;
@@ -347,8 +346,7 @@ aside h5 {
 }
 
 .inflation-container {
-  position: relative;
-  left: 18%;
+  padding-left: 18%;
 }
 
 iframe {
